# soa.hpp

./: .editorconfig  .gitmodules  CMakeLists.txt  README.md  soa.hpp
tests/: CMakeLists.txt  readme_test.cpp  soa_test.cpp
